# termflow-core

./: .env.example  .gitignore  .mcp.json  API-QUICK-START.md  CLAUDE.md  GEMINI.md  PACKAGED-APP-API-GUIDE.md  PROJECT_STRUCTURE.md  README.md  RUN-API-WITH-PACKAGED-APP.md  SHARED-API-ARCHITECTURE.md  agent.md  auth.js  build-debug.bat  build.bat  bunfig.toml  jest.config.js  package.json  playwright.config.ts  publish-macos.sh  publish-windows.ps1  rebuild-and-start.bat  rebuild-and-start.ps1  rebuild-and-start.sh  start-headless.bat  start-monitor-dev.bat  start-web-dev.bat  start-with-api.bat  termflow-api.postman_collection.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  webpack.renderer.config.js
.agent-comms/: README.md
.antigravity/: mcp_config.json
.codex/: config.toml
.github/workflows/: ci.yml  e2e-tests.yml  release.yml  rust-tests.yml
agent-monitor/: .env.example  CLAUDE-PROJECT-EXAMPLE.md  DEFAULT-TERMINAL-TAB-REQUIREMENTS-FOLDER-UPDATE.md  HEADLESS-MODE.md  HUMAN-PAUSE-RESUME.md  PRODUCT-MANAGER-UPDATE-SUMMARY.md  README-ENHANCED.md  README-FINAL.md  README-SIGNALR-UPDATE.md  README.md  SMART-ACTIVITY-DETECTOR.md  TEAM-ORCHESTRATION-GUIDE.md  TEAMWORK-FRAMEWORK-SUMMARY.md  TEAMWORK-INTEGRATION-GUIDE.md  VARIABLE-TOKENS-UPDATE.md  check-claude-status.js  debug-500-error.js  debug-chathub-url.js  debug-env.js  debug-profile-issue.js  debug-same-tab-issue.js  debug-team-start.js  debug-terminal-assignment.js  debug-terminal-mapping.js  enhanced-team-config.json  env.example  example-team.json  final-test.js  fix-agent-monitor-routing.js  fix-shell-profile-mapping.md  fix-tab-id-issue.js  generate-dev-token.js  generate-token.js  get-valid-token.js  launch-agents.js  package-lock.json  package.json  start-enhanced-team.js  start-headless-team.js  start-team.js  (+38 more)
agent-monitor/src/: activity-detector.ts  agent-detector.ts  api-client.ts  chathub-api-client.ts  chathub-integration.ts  communication-protocol-enforcer.ts  discord-alerts.ts  enforcement-config.ts  enhanced-team-orchestrator.ts  git-discipline-enforcer.ts  headless-client.ts  headless-config.ts  index.ts  prompt-manager.ts  quality-gate-manager.ts  session-persistence.ts  task-router.ts  team-manager.ts  team-orchestrator.ts  team-types.ts  terminal-naming-manager.ts  types.ts
docs/ci/: 001-quarantined-playwright-suites.md
docs/guides/: 001-terminal-color-contrast.md
legal/: EULA-installer.txt  EULA.rtf  EULA.txt  LICENSE-fabric-fsl.txt  PRIVACY.txt  README.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: apiClient.ts  heartbeat.ts  identity.ts  index.ts  server.ts
mcp-server/test/: apiClient.test.ts  heartbeat.integration.test.ts  heartbeat.realstream.integration.test.ts  heartbeat.test.ts  helpers.ts  identity.integration.test.ts  identity.test.ts  sanity.test.ts  server.test.ts  session.integration.test.ts
patches/: node-pty-patch.js  xterm-dim-patch.js
scripts/: build-fabric-sidecar.mjs  build-mcp-sidecar.mjs  build-pty-host-sidecar.mjs  build-pty-host.sh  gen-eula-rtf.mjs  gen-notification-sounds.mjs  gen-third-party-notices.mjs  smoke-test-release.mjs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.pro.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pty-host/: Cargo.toml  build.rs
src-tauri/pty-host/src/: detach.rs  main.rs  manager.rs  pipe.rs  ring.rs  session.rs  util.rs  winjob.rs
src-tauri/pty-host/src/transport/: mod.rs  pipe_windows.rs  socket_unix.rs
src-tauri/pty-protocol/: Cargo.toml
src-tauri/pty-protocol/src/: bootstrap.rs  discovery.rs  frame.rs  lib.rs  spec.rs
src-tauri/src/: api_server.rs  app_config.rs  commands.rs  context_menu.rs  event_bus.rs  fabric_manager.rs  history_store.rs  layout_endpoints.rs  layout_manager.rs  lib.rs  main.rs  native_notify.rs  network_commands.rs  open_commands.rs  panic_hook.rs  peer_commands.rs  pty_host_client.rs  pty_manager.rs  recording_endpoints.rs  recording_service.rs  search_endpoints.rs  search_service.rs  session_notify.rs  shell_integration.rs  state.rs  tmux_manager.rs  updater.rs
src/api/: CommandCompletionMonitor.ts  EventBatcher.ts  EventBus.ts  EventIntegration.ts  ProcessMonitor.ts  RecordingEndpoints.ts  SearchEndpoints.ts  SharedPTYManager.ts  SharedRESTServer.ts  TerminalAPIClient.ts  WebSocketServer.ts  auth.ts
src/main/: HeadlessManager.ts  terminalMetadata.ts
src/renderer/: App.tsx  index.html  index.tsx  legal.ts  polyfills.js
src/shell/: PTYManager.ts  ShellProfileManager.ts  mock-pty.ts  pty-wrapper.ts  windows-fallback-pty.ts  windows-pty.ts
src/test/: setup.ts
src/types/: global.d.ts  recording.ts  search.ts
terminal-kit/: README.md  package-lock.json  package.json
terminal-kit/src/: index.ts
terminal-monitor/: .env.development  .env.example  .eslintrc.json  .prettierrc  README.md  WEBSOCKET-AUTH-FIX.md  craco.config.js  manual-test.md  package.json  playwright.config.ts  test-auth.js  test-dimension-fix.js  tsconfig.json
terminal-monitor/public/: index.html  manifest.json
terminal-monitor/src/: App.tsx  debug-token.js  index.css  index.tsx  setupProxy.js  test-auth-detailed.js  test-header-auth.js  test-jwt-debug.js  test-token-extraction.js  test-websocket.js
terminal-monitor/tests/: terminal-absolute-position-test.spec.js  terminal-content.spec.js  terminal-debug-height.spec.js  terminal-fullscreen.spec.js  terminal-height-debug.spec.js  terminal-height-optimization.spec.js  terminal-height-responsiveness.spec.js  terminal-manual-verification.spec.js  terminal-maximize.spec.js  terminal-maximum-screen.spec.js  terminal-responsive-scaling.spec.js  terminal-rows.spec.js  (+6 more)
tests/: README.md
(+315 files in other folders)
