[package]
name = "termflow-pty-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "termflow_pty_protocol"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
